blog highlight issue solved , contact us image is removed on mobile mode, home nav item removed

--- a/tuitionbell/src/app/header/header.component.scss
+++ b/tuitionbell/src/app/header/header.component.scss
@@ -9,7 +9,7 @@
       color: #c8dd82;
       background-color: transparent;
       -webkit-box-shadow: none;
-      -moz-box-shadow: none;
+      -moz-box-shadow: none; 
       box-shadow: none;
     }
   }
@@ -19,11 +19,12 @@
 }
 .navbar-brand {
   text-align: center;
-  color: white;
+  color: white !important;
   font-size: 25px;
   letter-spacing: 4px;
   // font-family: Montserrat;
   font-weight: bold;
+  &:hover{color: #c8dd82 !important}
 }
 .navbar-nav {
   text-align: center;
@@ -136,7 +137,7 @@ input[type="text"]:focus {
   color: #aaa;
   transition: 0.3s;
 }
-
+ 
 .inputWithIcon input[type="text"]:focus + i {
   color: dodgerBlue;
 }
